fixed spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ input[type='submit'],
 
 /* List Space */
 #list-space {
-    margin: 0 0 90px 0;
+    margin: 10px 0 90px 0;
 }
     #list-space h2 {
         text-align: center;
